hydran-17766: dept44 v. 7.x
